--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,25 @@
   text-align: center;
 }
 
+.common-body{
+    margin-left: -20px;
+    border-radius: 5px;
+    background-color: white;
+    padding: 1rem;
+    margin: 1rem;
+    box-shadow: 0px 1px 10px rgb(227, 227, 227);
+}
+
+header{
+  box-shadow: 0px 3px 10px rgb(227, 227, 227);
+}
+
+.feather img {
+  height: 60px;
+  margin-right: 8px;
+  border-radius: 10px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
